Thu Jun 18 12:49:58 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * examples/arch/tcpip/HelloWorld/HelloWorld_Basic_Impl.cpp:

          . Added debug statements to the source.

Thu Jun 18 12:25:11 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * examples/arch/tcpip/HelloWorld/HelloWorld_Basic_Impl.h:
        * examples/arch/tcpip/HelloWorld/HelloWorld_Basic_Impl.cpp:

          . Missing project files.

Thu Jun 18 12:05:47 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * examples/arch/tcpip/HelloWorld/HelloWorld_Basic_Impl.mpc:

          . Missing project file.

        * examples/arch/tcpip/HelloWorld/HelloWorld_Impl.mpc:

          Removed this file.

Thu Jun 18 05:34:38 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * MDE/GME/paradigms/CUTS/interpreters/UNITE/UNITE.mpc:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/CUTS_PICML.mpc:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/Main_Dialog.cpp:
        * MPC/config/cuts_base.mpb:
        * MPC/config/gme_rawcom.mpb:

          . Fixed compile errors/warnings on vc8.

Wed Jun 17 22:11:29 UTC 2009  Pooja Varshneya  <varshneya_p@local>

        * MDE/GME/paradigms/CUTS/paradigm/icons/Group.bmp:
        * MDE/GME/paradigms/CUTS/paradigm/icons/GroupItem.bmp:
        * MDE/GME/paradigms/CUTS/paradigm/icons/Key.bmp:
        * MDE/GME/paradigms/CUTS/paradigm/icons/Service.bmp:
        * MDE/GME/paradigms/CUTS/paradigm/icons/Variable.bmp:

          . Added icons for CUTS DSML

        * MDE/GME/paradigms/CUTS/paradigm/icons/logformat.bmp:

          Removed this file.

Wed Jun 17 20:36:56 UTC 2009  Pooja Varshneya  <varshneya_p@local>

        * ChangeLog:

        * MDE/GME/paradigms/CUTS/interpreters/UNITE/UniteVisitor.cpp:

          . Updated UniteVisitor for mapping Log_Elements to GroupItem

        * MDE/GME/paradigms/CUTS/paradigm/CUTS.xme:
        * MDE/GME/paradigms/CUTS/paradigm/CUTS.xml: