@@ -1,0 +1,8 @@
+// -*- C++ -*-
+
+#ifndef _CUTS_TCPIP_CONFIG_H_
+#define _CUTS_TCPIP_CONFIG_H_
+
+#include "config-default.h"
+
+#endif  // !defined _CUTS_TCPIP_DEFAULT_CONFIG_H_
